--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*
-APPLY FONTS TO ENTIRE APP
+APPLY FONTS TO EVERY ELEMENT
 */
 
 html {
@@ -10,8 +10,16 @@ html {
 NAV BAR (employee button/timeslip button/trash can icon)
 */
 
+.employeeButtonContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 20%;
+}
+
 .topNavBar {
-    padding: 2%;
+    padding: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .topNavBar {
@@ -20,14 +28,36 @@ NAV BAR (employee button/timeslip button/trash can icon)
     padding-top: 1%;
 }
 
+
+.trashCan {
+    width: 100%;
+    margin-left: 2%;
+    border: 1px solid black;
+}
+
+.trashCan:hover {
+    background-color: darkgray;
+}
+
+.trashCan img {
+    height: 50px;
+    width: 50px;
+    padding-left: 35%;
+}
+
+.trashCan span {
+    position: relative;
+    width: 100%;
+}
+
 /*
 ADD EMPLOYEE BUTTON
 */
 
-.addEmployeeButton {
-    color: gray;
+.addEmployeeButton:hover {
+    cursor: pointer;
+    background-color: darkgray;
 }
-
 
 /*
 ENTIRE CONTAINER (everything exclduing nav bar)
@@ -44,11 +74,12 @@ EMPLOYEE CONTAINER
 */
 
 .employeeBlockContainer {
-    border: 1px solid black;
-    height: 800px;
+    border: 2px solid black;
+    height: 818px;
     width: 15%;
     overflow: scroll;
 }
+
 
 /* EMPLOYEE SLOT TOGGLE*/
 
@@ -133,26 +164,12 @@ SCHEDULE TABLE (all employee slots and hp1/hp2 headers, and delete trash can ico
 table * {
     height: 87.9px;
     width: 1%;
-    border: 1px solid black;
+    border: 3px solid black;
     text-align: center;
     vertical-align: middle;
     font-weight: 400;
     font-size: 25px;
-}
-
-.trashCan img {
-    padding-top: 1.5%;
-    border: hidden;
-    height: 75px;
-    width: 80px;
-}
-
-.trashCan {
-    border: hidden;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(233, 233, 233);
-    text-align: center;
+    font-weight: 500;
 }
 
 .hp1, .hp1Left{
