--- a/css/main.css
+++ b/css/main.css
@@ -7,27 +7,56 @@ html {
 }
 
 /*
-NAV BAR (employee button/timeslip button/trash can icon)
+NAV 
 */
 
-.employeeButtonContainer {
-    display: flex;
-    justify-content: space-between;
-    width: 20%;
-}
 
 .topNavBar {
     padding: 1%;
     margin-left: 1%;
     margin-right: 1%;
-}
-
-.topNavBar {
     display: flex;
     justify-content: space-between;
     padding-top: 1%;
 }
 
+
+/*
+CLEAR BUTTON
+*/
+
+.buttonSpan {
+    padding-top: 10px;
+}
+
+.clearButton .buttonSpan {
+    padding-top: 11px;
+    padding-left: 3px;
+}
+
+.clearButton {
+    background-color: rgba(205, 78, 78, 0.8);
+    border: 1px solid black;
+    border-radius: 3px;
+    height: 40px;
+    width: 200px;
+    font-weight: 600;
+    box-shadow: 0px 3px black;
+    display: flex;
+}
+
+.clearButton img {
+    height: 25px;
+    padding-left: 15px;
+    padding-top: 6px;
+}
+
+.clearButton:hover {
+    background-color: rgba(139, 55, 55, 0.8);
+    cursor: pointer;
+    color: white;
+    box-shadow: 0px 3px black;
+}
 
 /*
 ADD EMPLOYEE BUTTON
@@ -37,12 +66,26 @@ ADD EMPLOYEE BUTTON
     background-color: rgba(158, 228, 155, 0.8);
     border: 1px solid black;
     border-radius: 3px;
+    height: 40px;
+    width: 200px;
+    font-weight: 600;
+    box-shadow: 0px 3px  black;
+    display: flex;
 }
 
 .addEmployeeButton:hover {
     cursor: pointer;
     background-color: rgba(94, 139, 93, 0.8);
+    color: white;
+    box-shadow: 0px 3px black;
 }
+
+.addEmployeeButton img {
+    height: 20px;
+    padding-left: 15px;
+    padding-top: 8px;
+}
+
 
 /*
 ENTIRE CONTAINER (everything exclduing nav bar)
@@ -170,6 +213,10 @@ td .employeeSlotToggle span {
     line-height: 2.0;
 }
 
+
+/*
+DROPPED EMPLOYEE
+*/
 .droppedEmployee {
     line-height: 3.0;
 }
